nav_top y maquetacion del nav y el logo

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 @import url(reser.css);
-@import url(@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat&display=swap'););
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css);
 
-font-family: 'Handlee', cursive;
-font-family: 'Montserrat', sans-serif;
+
 *{
     box-sizing: border-box;
 }
@@ -36,6 +35,40 @@ body{
 .container{
     max-width: var(--anchoMaximo);
     margin: 0 auto;
-    
+
 }
 
+/* inicio header */
+header .nav_top{
+    background-color: var(--colorSecundario);
+    padding: var(--marginGrid);
+}
+header .nav_top .container{
+    display: flex;
+    justify-content: space-around;
+
+}
+
+header .nav_top a{
+    text-decoration: none;
+}
+
+header .nav_top a i{
+    color: var(--colorPrincipal);
+    font-size: 140%;
+}
+header .nav_top a span{
+    color: white;
+    display: none;
+}
+/* inicio header */
+/*breakpoint 768px */
+@media(min-width: 48em){
+header .nav_top a span{
+    color: white;
+    display: inline;
+}
+header .nav_top .container{
+    justify-content: space-between;
+}
+}
