--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(reser.css);
+@import url(reset.css);
 @import url('https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css);
 
@@ -61,14 +61,75 @@ header .nav_top a span{
     color: white;
     display: none;
 }
+
+header nav{
+    padding: var(--marginGrid);
+
+}
+
+header nav .logo{
+    float: left;
+    max-width: 100px;
+}
+
+header nav .hamburguesa{
+    float: right;
+    cursor: pointer;
+    width: 2em;
+}
+
+header nav .hamburguesa div{
+    border-top: 2px solid #aaa;
+    margin-bottom: 0.625em; /* diferencia entre em y rem */
+
+}
+
+header nav .menu{
+    clear: both;
+    padding-top: 0.625em;
+    text-align: center;
+}
+header nav .menu a{
+    display: block;
+    text-decoration: none;
+    padding: var(--marginGrid);
+    color: #aaa;
+    border-bottom: 1px solid #aaa;
+}
+header nav .menu li:last-child a{
+    border: 0px;
+}
+
+header nav .menu :is(.activo, a:hover){
+    color: var(--fuentePrincipal);
+}
+
 /* inicio header */
 /*breakpoint 768px */
-@media(min-width: 48em){
-header .nav_top a span{
-    color: white;
+@media(min-width: 48em)
+{header .nav_top a span
+    {color: white;
     display: inline;
 }
 header .nav_top .container{
     justify-content: space-between;
 }
+}
+
+@media(min-width: 62.750em){
+    header nav .hamburguesa{
+        display: none;
+    }
+    header nav .menu{
+        float: right;
+        padding-top: 0;
+        clear: none;
+    }
+    header nav .menu li{
+        display: inline-block;
+    }
+    header nav .menu a{
+        border: none;
+        padding: 0.4em 0 em 0.4em 2.5em;
+    }
 }
