--- a/css/style.css
+++ b/css/style.css
@@ -142,10 +142,74 @@ footer a:hover{
 .arriba a{
     color: var(--colorPrincipal);
 }
-
 /*Final de footer*/
-
 /* inicio header */
+.hero{
+    background-image: url(../images/fondo.jpg );
+    background-color: #999;
+    background-blend-mode: multiply;
+    background-position: center center;
+    background-size: cover;
+    height: 60vh;
+    display: flex;
+}
+
+.hero .container{
+    width: 95%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.hero h1{
+font-family: var(--fuenteSecundaria);
+font-size: 230%;
+color: white;
+
+}
+.hero :is(h2, .container>div){
+    margin: var(--marginGrid)  0;
+}
+.hero h2{
+    color: var(--colorPrincipal);
+    font-size: 125%;
+    text-shadow: 2px 2px 3px black;
+}
+
+.hero p{
+    color: white;
+    font-size: 155%;
+}
+
+.boton{
+display: inline-block;
+background-color: var(--colorPrincipal);
+padding: 1.15em;
+color: white;
+text-decoration: none;
+border: 1px solid var(--colorPrincipal);
+}
+
+.boton:hover{
+    background-color: transparent;
+    color: var(--colorPrincipal);
+}
+.boton:hover i{
+    transition: 0.5s;
+    transform: translateX(5px);
+}
+.hero .social{
+    width: 160px;
+    display: flex;
+    justify-content: space-between;
+}
+.hero .social a{
+    color: white;
+    text-decoration: none;
+    font-size: 200%;
+}
+/* final hero+/
+
+
 /*breakpoint 768px */
 @media(min-width: 48em)
 {header .nav_top a span
