--- a/css/style.css
+++ b/css/style.css
@@ -205,19 +205,108 @@ border: 1px solid var(--colorPrincipal);
 .hero .social a{
     color: white;
     text-decoration: none;
-    font-size: 200%;
+    font-size: 700;
 }
 /* final hero+/
+
+/* inicio ourservices*/
+
+section{
+    padding: 2.5em 0 4em 0;
+}
+
+section h2{
+    color: black;
+    font-family: var(--fuenteSecundaria);
+    font-size: 200%;
+    text-align: center;
+}
+
+section h2 span {
+    color: var(--colorPrincipal);
+}
+
+section .underline {
+    position: relative;
+    width: 100px;
+    margin: 0 auto;
+    font-weight: 700;
+    color: var(--colorPrincipal);
+    text-align: center;
+}
+
+section .underline hr{
+    position: absolute;
+    width: 100%;
+    top: -1px;
+    border-color: var(--colorPrincipal);
+}
+
+
+
+
+#ourservices .grid{
+    display: grid;
+    gap: var(--marginGrid);
+    padding: 0 var(--marginGrid);
+}
+
+section article{
+    padding: calc(var(--marginGrid)*2) 0;
+    border-bottom: 1px solid #aaa;
+}
+
+section article h3{
+    font-weight: 700;
+    margin: 0.5em 0;
+    font-size: 110%;
+}
+
+section p{
+    color: #777;
+    line-height: 1.15em;
+    margin-bottom: var(--marginGrid);
+}
+
+#ourservices article>div i{
+    border: 1px solid var(--colorPrincipal);
+    color: var(--colorPrincipal);
+    font-size: 150%;
+    padding : 0.5em;
+}
+
+.enlace{
+    text-decoration: none;
+    color: var(--colorPrincipal);
+    font-weight: 700;
+} 
+
+.fa-truck{
+    transform: rotateY(180deg);
+}
+
+/* final oursevices */
 
 
 /*breakpoint 768px */
 @media(min-width: 48em)
 {header .nav_top a span
-    {color: white;
-    display: inline;
+    {display: inline;
 }
 header .nav_top .container{
     justify-content: space-between;
+}
+.ourservices .grid{
+    grid-template-columns: repeat(2, 1fr);
+}
+#ourservices .grid article:last-child{
+    grid-column: 1/3;
+}
+
+section article{
+    padding: calc(var(--marginGrid)*2);
+    border-bottom: 0px;
+    border-left: 1px solid #aaa;
 }
 }
 
@@ -237,4 +326,16 @@ header .nav_top .container{
         border: none;
         padding: 0.4em 0 em 0.4em 2.5em;
     }
-}
+    #ourservices .grid{
+        grid-template-columns: repeat(3, 1fr)
+     }
+ 
+     #ourservices .grid article:last-child{
+         grid-column: 3/4;
+     }
+ 
+     /* pagina interesante de css grid 
+     https://css-tricks.com/snippets/css/complete-guide-grid/ */
+ 
+ }
+
