--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ border: 1px solid var(--colorPrincipal);
 /* inicio ourservices*/
 
 section{
-    padding: 2.5em 0 4em 0;
+    padding: 2.5em 0 4.5em 0;
 }
 
 section h2{
@@ -256,7 +256,7 @@ section article{
     border-bottom: 1px solid #aaa;
 }
 
-section article h3{
+section h3{
     font-weight: 700;
     margin: 0.5em 0;
     font-size: 110%;
@@ -287,6 +287,42 @@ section p{
 
 /* final oursevices */
 
+
+/* Inicio About ut */
+
+section h4{
+    color: var(--colorPrincipal);
+    margin-bottom: 0.5em;
+}
+section .flex{
+    padding: var(--marginGrid);
+}
+#about figure{
+    width: 85%;
+    margin: 2em auto;
+}
+
+#aboutus figure .marco{
+    border: 3px solid var(--colorPrincipal);
+    transform: rotateZ(10deg);
+    transition: 1s;
+}
+#aboutus figure .marco img{
+    transform: rotateZ(-10deg);
+    transition: 1s;
+}
+
+#aboutus figure:hover :is(.marco, .marco img){
+    transform: rotateZ(0deg);
+}
+#aboutus .flex{
+    display: flex;
+}
+
+
+/* Final About ut */
+
+/* mediaquerys */
 
 /*breakpoint 768px */
 @media(min-width: 48em)
