--- a/css/style_index.css
+++ b/css/style_index.css
@@ -39,111 +39,6 @@ body{
 }
 
 /* inicio header */
-header .nav_top{
-    background-color: var(--colorSecundario);
-    padding: var(--marginGrid);
-}
-header .nav_top .container{
-    display: flex;
-    justify-content: space-around;
-
-}
-
-header .nav_top a{
-    text-decoration: none;
-}
-
-header .nav_top a i{
-    color: var(--colorPrincipal);
-    font-size: 140%;
-}
-header .nav_top a span{
-    color: white;
-    display: none;
-}
-
-header nav{
-    padding: var(--marginGrid);
-
-}
-
-header nav .logo{
-    float: left;
-    max-width: 100px;
-}
-
-header nav .hamburguesa{
-    float: right;
-    cursor: pointer;
-    width: 2em;
-}
-
-header nav .hamburguesa div{
-    border-top: 2px solid #aaa;
-    margin-bottom: 0.625em; /* diferencia entre em y rem */
-
-}
-
-header nav .menu{
-    clear: both;
-    padding-top: 0.625em;
-    text-align: center;
-}
-header nav .menu a{
-    display: block;
-    text-decoration: none;
-    padding: var(--marginGrid);
-    color: #aaa;
-    border-bottom: 1px solid #aaa;
-}
-header nav .menu li:last-child a{
-    border: 0px;
-}
-
-header nav .menu :is(.activo, a:hover){
-    color: var(--colorPrincipal);
-}
-header nav:after{
-    content: "";
-    display: block;
-    height: 0;
-    clear: both;
-    
-}
-/* final header*/
-
-/* principio footer */
-
-footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: var(--colorSecundario);
-    color: white;
-    padding: var(--marginGrid);
-}
-
-footer a{
-    color: white;
-    text-decoration: none;
-
-}
-
-footer a:hover{
-    color: var(--colorPrincipal);
-}
-.arriba{
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    font-size: 2em;
-}
-
-.arriba a{
-    color: var(--colorPrincipal);
-}
-/*Final de footer*/
-/* inicio header */
 .hero{
     background-image: url(../images/fondo.jpg );
     background-color: #999;
@@ -326,13 +221,8 @@ section .flex{
 /* mediaquerys */
 
 /*breakpoint 768px */
-@media(min-width: 48em)
-{header .nav_top a span
-    {display: inline;
-}
-header .nav_top .container{
-    justify-content: space-between;
-}
+@media(min-width: 48em){
+
 .ourservices .grid{
     grid-template-columns: repeat(2, 1fr);
 }
@@ -356,21 +246,7 @@ section article{
 }
 
 @media(min-width: 62.750em){
-    header nav .hamburguesa{
-        display: none;
-    }
-    header nav .menu{
-        float: right;
-        padding-top: 0;
-        clear: none;
-    }
-    header nav .menu li{
-        display: inline-block;
-    }
-    header nav .menu a{
-        border: none;
-        padding: 0.4em 0 em 0.4em 2.5em;
-    }
+   
     #ourservices .grid{
         grid-template-columns: repeat(3, 1fr)
      }
